syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.tevfikkoseli.app.service.grpc.order.proto";

service OrderGRPCService {
  rpc findOrdersByClientId(IntId) returns (stream OrderInfo);
  rpc findOrdersByProductId(IntId) returns (stream OrderInfo);
  rpc findOrdersByMonthAndYear(IntPair) returns (stream OrderInfo);
  rpc findOrdersByYearBetween(IntPair) returns (stream OrderInfo);
  rpc findOrderProductsByOrderId(LongId) returns (stream OrderProductInfo);
  rpc findOrderProductsByProductId(IntId) returns (stream OrderProductInfo);
  ///////////////////////////////////////////////////////////////////////////////
  rpc findOrderInformationByIdentity(IdentityInfo) returns (stream OrderInformation);
  //...
}

message IntId {
  fixed32 id = 1;
}

message LongId {
  fixed64 id = 1;
}

message OrderByClientIdRequest {
  fixed32 clientId = 1;
}

message OrderByProductIdRequest {
  fixed32 productId = 1;
}

message IntPair {
  fixed32 first = 1;
  fixed32 second = 2;
}

message OrderInfo {
  string datetime = 1;
  fixed32 clientId = 2;  
}

message OrderProductInfo {
  fixed64 orderId = 1;
  fixed32 productId = 2;
  double quantity = 3;
  double unitPrice = 4;
}

message IdentityInfo {
  string identity = 1;
}

message OrderInformation {
  fixed32 productId = 1;
  fixed32 clientId = 2;
  string datetime = 3;
  double quantity = 4;
  double unitPrice = 5;
}

